<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvNameLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:text="@string/customer_name"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/customer_name"/>

        <TextView
            android:id="@+id/tvDocIDLabel"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/document_id"/>

        <TextView
            android:id="@+id/tvDocID"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/document_id"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSrcStnLabel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/src_stn"/>

        <TextView
            android:id="@+id/tvSrcStn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:text="@string/src_stn"/>

        <TextView
            android:id="@+id/tvDestStnLabell"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dest_stn"/>

        <TextView
            android:id="@+id/tvDestStn"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/dest_stn"/>
    </LinearLayout>

</LinearLayout>